--- a/books.html
+++ b/books.html
@@ -49,26 +49,19 @@
     <section>
       <div class="container">
         <div class="row">
+            <div class="books__header">
           <h2 class="section__title books__header--title">
             All <span class="purple">Books</span>
           </h2>
-          <div class="book">
-            <figure class="book__img--wrapper">
-              <img class="book__img" src="assets/atomic habits.jpg" alt="">
-            </figure>
-            <div class="book__title">
-              Atomic Habits
-            </div>
-            <div class="book__ratings">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star-half-alt"></i>
-            </div>
-            <div class="book__price">
-              <span class="book__price--normal">$59.95</span> $14.95
-            </div>
+          <select id="filter" onchange="filterBooks(event)">
+            <option value="" disabled selected>Sort</option>
+            <option value="LOW_TO_HIGH">Price, Low to High</option>
+            <option value="HIGH_TO_LOW">Price, High to Low</option>
+            <option value="RATING">Rating</option>
+          </select>
+        </div>
+          <div class="books">
+
           </div>
         </div>
       </div>
@@ -89,7 +82,7 @@
           <a href="#features" class="footer__link">Books</a>
           <a class="footer__link no-cursor">Contact</a>
         </div>
-        <div class="footer__copyright">Copyright &copy; 2021 Library</div>
+        <div class="footer__copyright">Copyright &copy; 2024 Library</div>
       </div>
     </div>
   </footer>
